# snn-training-templates

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
audio-classification/: hsd.py  hsd_exodus.py  train_hsd.py
object_detection/: dataset.py  model.py  train.py
posts/training-snns-faster/: index.ipynb
spiking-speech-commands/: README.md  model.py  requirements.txt  ssc.py  train.py
