[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gregor Lenz", email = "gregor.lenz@synsense.ai"},
]
dependencies = [
    "tonic>=1.2.2",
    "torch==1.12.1",
    "torchvision>=0.13.1",
    "sinabs @ file:///${PROJECT_ROOT}/../sinabs",
]
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["dependencies"]

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
